--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ sonarqube {
         property "sonar.organization", "alexeyakentyev"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.coverage.exclusions", "**/BranchConnection.*, **/BranchConnectionBuilder.*"
+        property "sonar.qualitygate.wait", true
     }
 }
 
