--- a/.cloudbuild/cloudbuild-pr.yaml
+++ b/.cloudbuild/cloudbuild-pr.yaml
@@ -5,11 +5,9 @@ steps:
     args: [ 'test' ]
   - name: gradle:7.5.1-jdk11
     id: static-analysis
-    entrypoint: gradle
-    args: [ 'sonar' ]
+    entrypoint: bash
+    args: [ '-c', 'gradle sonar -Dsonar.login=$$SONAR_TOKEN -Dsonar.pullrequest.key=$_PR_NUMBER -Dsonar.pullrequest.branch=$_HEAD_BRANCH -Dsonar.pullrequest.base=$_BASE_BRANCH' ]
     secretEnv: [ 'SONAR_TOKEN' ]
-    env:
-      - 'sonar.login=$$SONAR_TOKEN'
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     id: deploy
     entrypoint: 'bash'
