--- a/.cloudbuild/cloudbuild-master.yaml
+++ b/.cloudbuild/cloudbuild-master.yaml
@@ -4,10 +4,14 @@ steps:
     entrypoint: gradle
     args: [ 'test' ]
   - name: gradle:7.5.1-jdk11
-    id: static-analysis
+    id: static-analysis-sonar
     entrypoint: bash
     args: [ '-c', 'gradle sonar -Dsonar.login=$$SONAR_TOKEN -Dsonar.branch.name=$BRANCH_NAME' ]
     secretEnv: [ 'SONAR_TOKEN' ]
+  - name: gradle:7.5.1-jdk11
+    id: static-analysis-groovy-codenarc
+    entrypoint: bash
+    args: [ '-c', 'gradle codenarcTest' ]
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     id: deploy
     entrypoint: 'bash'
