--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'com.google.cloud.tools.appengine' version '2.4.4'
     id "org.sonarqube" version "3.5.0.2730"
     id 'jacoco'
+    id 'codenarc'
 }
 
 group 'org.aa.branch.mapping'
@@ -79,6 +80,8 @@ jacocoTestReport {
     }
 }
 
+codenarc.configFile = rootProject.file('gradle/codenarc/rulesets.groovy')
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -93,6 +96,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.rest-assured:rest-assured:4.5.1'
     testImplementation 'com.devskiller:jfairy:0.6.5'
+    testImplementation 'org.apache.commons:commons-text:1.10.0'
+
+    codenarc 'org.codenarc:CodeNarc:3.1.0'
 }
 
 tasks.named('wrapper', Wrapper) {
