--- a/.cloudbuild/cloudbuild-master.yaml
+++ b/.cloudbuild/cloudbuild-master.yaml
@@ -9,7 +9,7 @@ steps:
     entrypoint: bash
     args: [ '-c', 'gradle sonar -Dsonar.login=$$SONAR_TOKEN -Dsonar.branch.name=$BRANCH_NAME' ]
     secretEnv: [ 'SONAR_TOKEN' ]
-    waitFor: [ 'test' ]
+    waitFor: [ 'unit-tests' ]
   - name: gradle:7.5.1-jdk11
     id: static-analysis-groovy-codenarc
     entrypoint: bash
